@@ -40,7 +40,7 @@ from kiwi.interfaces import ISearchFilter
 from kiwi.python import enum
 from kiwi.ui.dateentry import DateEntry
 from kiwi.ui.delegates import SlaveDelegate
-from kiwi.ui.objectlist import ObjectList
+from kiwi.ui.objectlist import ObjectList, SummaryLabel
 from kiwi.ui.widgets.combo import ProxyComboBox
 from kiwi.utils import gsignal, gproperty
 
@@ -549,6 +549,7 @@ class SearchContainer(gtk.VBox):
         self._search_filters = []
         self._query_executer = None
         self._auto_search = True
+        self._summary_label = None
 
         search_filter = StringSearchFilter(_('Search:'), chars=chars)
         search_filter.connect('changed', self._on_search_filter__changed)
@@ -703,6 +704,7 @@ class SearchContainer(gtk.VBox):
         results = self._query_executer.search(states)
         self.results.clear()
         self.results.extend(results)
+        self._summary_label.update_total()
 
     def set_auto_search(self, auto_search):
         """
@@ -732,6 +734,31 @@ class SearchContainer(gtk.VBox):
         self._primary_filter.hide()
         self._search_filters.remove(self._primary_filter)
         self._primary_filter = None
+
+    def set_summary_label(self, column, label='Total:', format='%s'):
+        """
+        Adds a summary label to the result set
+        @param column: the column to sum from
+        @param label: the label to use, defaults to 'Total:'
+        @param format: the format, defaults to '%%s', must include '%%s'
+        """
+        if not '%s' in format:
+            raise ValueError("format must contain %s")
+
+        try:
+            self.results.get_column_by_name(column)
+        except LookupError:
+            raise ValueError("%s is not a valid column" % (column,))
+
+        if self._summary_label:
+            raise ValueError("A summary label is already added")
+        self._summary_label = SummaryLabel(klist=self.results,
+                                           column=column,
+                                           label=label,
+                                           value_format=format)
+        self.pack_end(self._summary_label, False, False)
+        self.reorder_child(self._summary_label, 1)
+        self._summary_label.show()
 
     #
     # Callbacks
@@ -847,6 +874,11 @@ class SearchSlaveDelegate(SlaveDelegate):
         """
         self.search.disable_search_entry()
 
+    def set_summary_label(self, column, label='Total:', format='%s'):
+        """
+        See L{SearchContainer.set_summary_label}
+        """
+        self.search.set_summary_label(column, label, format)
 
     #
     # Overridable
